# QM

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  TESTING.md  TODO.md  paper.bib  paper.md  pyproject.toml  run.bat  run.sh
backend/: app.py  crank_nicolson.py  eigenvalue_solver.py  expectation_values.py  grid.py  hamiltonian.py  initial_states.py  momentum.py  presets.py  requirements-dev.txt  requirements.txt
backend/shared/: potential_parser.py  units.py
backend/solvers/hydrogenic/: __init__.py  orbitals.py  radial_solver.py  router.py
backend/solvers/schrodinger_1d/: crank_nicolson.py  eigenvalue_solver.py  hamiltonian.py  initial_states.py  probability_current.py  router.py
backend/solvers/spin/: physics.py  router.py
backend/tests/: test_api.py  test_api_spec16.py  test_api_spec17.py  test_crank_nicolson.py  test_eigenvalue_solver.py  test_energy_decomp.py  test_expectation_values.py  test_grid.py  test_hamiltonian.py  test_hydrogenic_api.py  test_hydrogenic_isosurface.py  test_hydrogenic_radial.py  test_initial_states.py  test_momentum.py  test_negative_eigenvalue_potentials.py  test_potential_parser.py  test_probability_current.py  test_regression_refactor.py  test_spin_api.py
docs/: potentials.md  pure_js_analytical_variant.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnimationControls.tsx  BlochSphere.tsx  ControlPanel.tsx  CurrentPlot.tsx  EnergyDecompositionInfoPanel.tsx  EnergyDecompositionPlot.tsx  ErrorBanner.tsx  ExactSolutionPanel.tsx  ExpectationValuesPlot.tsx  GrotriaDiagram.tsx  GrotrianDiagram.tsx  HydrogenicInfoPanel.tsx  HydrogenicPanel.tsx  MainPlot.tsx  MatrixHeatmap.tsx  MatrixPanel.tsx  MomentumPlot.tsx  OrbitalDensityInfoPanel.tsx  OrbitalIsosurface.tsx  OrbitalIsosurfaceInfoPanel.tsx  ParameterSlider.module.css  ParameterSlider.tsx  PauliMatrixDisplay.tsx  PhysicsPanel.module.css  PhysicsPanel.tsx  PlotArea.tsx  PrecessionControls.tsx  RadialDensityInfoPanel.tsx  RegimeIndicator.module.css  RegimeIndicator.tsx  SecondaryPlot.module.css  SecondaryPlot.tsx  SelectionRulesPanel.tsx  SolverInfoPanel.tsx  SphericalHarmonicInfoPanel.tsx  SpinInfoPanel.tsx  SpinPanel.tsx  SpinStateComposer.tsx  SternGerlachPanel.tsx
frontend/src/data/: potentials.ts
frontend/src/mock/: mockData.ts
frontend/src/test/: AnimationControls.test.tsx  ControlPanel.test.tsx  CurrentPlot.test.tsx  ExpectationValuesPlot.test.tsx  MainPlot.test.tsx  MatrixView.test.tsx  MomentumPlot.test.tsx  PhysicsPanel.test.tsx  PlotArea.test.tsx  PlotAreaCurrent.test.tsx  animationQol.test.tsx  apiClient.test.ts  classicalMechanics.test.ts  classicalOverlay.test.tsx  energyDecomposition.test.tsx  export.test.ts  setup.ts  (+16 more)
specs/: 01-grid-abstraction.md  02-hamiltonian.md  03-eigenvalue-solver.md  04-crank-nicolson-stepper.md  05-fastapi-endpoints.md  06-react-frontend-scaffold.md  07-wire-frontend-to-backend.md  08-expectation-values.md  09-expectation-values-ui.md  10-momentum-backend.md  11-momentum-frontend.md  12-probability-current-backend.md  13-probability-current-frontend.md  14-matrix-view.md  15-url-state.md  16-bug-fixes.md  17-initial-state-selection.md  18-refactor-solver-namespace.md  19-hydrogenic-solver.md  20-spin-bloch-stern-gerlach.md  21-classical-overlay.md  22-energy-decomposition.md  spin-future-scope.md
(+6 files in other folders)
