[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "schrodinger-solver"
version = "0.2026.0502"
description = "Browser-based interactive explorer for quantum mechanics: 1D Schrödinger equation (stationary and time-evolution), hydrogen-like atoms, and spin-½ / Bloch sphere"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Lubinsky" },
]
keywords = [
  "quantum mechanics",
  "Schrödinger equation",
  "Crank-Nicolson",
  "eigenvalue solver",
  "physics simulation",
  "hydrogen atom",
  "hydrogenic",
  "Grotrian diagram",
  "spin",
  "Bloch sphere",
  "Stern-Gerlach",
  "interactive",
  "education",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

# Runtime dependencies (backend server + solver)
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.11",
  "numpy>=1.22",
  "scipy>=1.9",
  "asteval>=1.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
  "httpx>=0.28",      # FastAPI TestClient transport
  "anyio>=4.9",       # async I/O (transitive, pinned for test stability)
  "pytest>=7.1",
]

[project.urls]
Repository = "https://github.com/mlubinsky/QM"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths  = ["backend/tests"]
